# Granular-Synth

./: .gitignore  CMakeLists.txt  Readme.md
src/: SynthEngine.cpp  SynthEngine.h  main.cpp
